# zeroquant

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
agents/: README.md  run.ps1
crates/trader-exchange/: Cargo.toml
crates/trader-exchange/.claude/skills/add-exchange/: SKILL.md
crates/trader-exchange/examples/: verify_connectors.rs
crates/trader-exchange/src/: circuit_breaker.rs  historical.rs  lib.rs  retry.rs  stream.rs  yahoo.rs
crates/trader-exchange/src/connector/: binance.rs  mod.rs
crates/trader-exchange/src/connector/bithumb/: client.rs  mod.rs  websocket.rs
crates/trader-exchange/src/connector/db_investment/: client.rs  websocket.rs
crates/trader-exchange/src/connector/kis/: auth.rs  client.rs  client_kr.rs  client_us.rs  config.rs  holiday.rs  websocket_kr.rs  websocket_us.rs
crates/trader-exchange/src/connector/ls_sec/: client.rs  websocket.rs
crates/trader-exchange/src/connector/upbit/: client.rs  websocket.rs
crates/trader-exchange/src/provider/: binance.rs  bithumb.rs  db_investment.rs  kis.rs  ls_sec.rs  mock.rs  mock_order_engine.rs  mock_streaming.rs  mod.rs  upbit.rs
crates/trader-exchange/src/simulated/: data_feed.rs  exchange.rs  matching_engine.rs  stream.rs
crates/trader-exchange/src/websocket/: stream.rs
crates/trader-exchange/tests/: data_feed_integration.rs
docs/: architecture.md  migration_guide.md  prd.md  todo.md  todo_v2.md
frontend/: package-lock.json
migrations_v2/: 01_core_foundation.sql  02_data_management.sql  03_trading_analytics.sql  04_strategy_signals.sql  05_evaluation_ranking.sql  (+5 more)
(+352 files in other folders)
